[metadata]
name = nitsm
version = attr: nitsm.__version__
url = https://github.com/ni/nitsm-python
author = NI
author_email = opensource@ni.com
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
description = NI TestStand Semiconductor Module Python API
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    pywin32>=228;platform_system=='Windows'
python_requires = >=3.6
package_dir =
    =src
packages = find:

[options.packages.find]
where = src
include = nitsm
